# NilaiTFO

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Nilai.h  README.md
.github/workflows/: formatter.yml  main.yml
bsp/: stm32.h  stm32f4xxInterrupts.cpp  stm32f4xxInterrupts.h  stm32l4xx_hal_sd.cpp  stm32l4xx_hal_sd.h
bsp/STEvents/: Adc.cpp  Can.cpp  Exti.cpp  I2c.cpp  I2s.cpp  Rtc.cpp  (+4 more)
defines/: Assertion.cpp  Assertion.h  Core.h  Literals.h  _pch.cpp  _pch.hpp  assertion.cpp  assertion.h  bitManipulations.hpp  bit_manipulations.h  circular_buffer.h  circular_buffer.hpp  compilerDefines.cpp  compilerDefines.h  compiler_defines.cpp  compiler_defines.h  containers.hpp  driverModule.hpp  globaldef.h  internalConfig.h  internal_config.h  ledPattern.h  led_pattern.h  macros.h  macros.hpp  misc.cpp  misc.h  misc.hpp  module.h  module.hpp  moduleThreadMemoryManager.hpp  pch.cpp  pch.hpp  pin.cpp  pin.h  size.h  smart_pointers.h  swap_buffer.h  system.h  typeTemplates.h  (+3 more)
drivers/: I2cModule.cpp  I2cModule.hpp  SaiModule.cpp  SaiModule.h  adcModule.cpp  adcModule.hpp  adc_module.cpp  adc_module.h  audio_device.h  canModule.cpp  canModule.cpp~RF1afd4f3.TMP  canModule.cpp~RF67396a20.TMP  canModule.hpp  can_module.cpp  can_module.h  i2cModule.cpp  i2cModule.hpp  i2c_module.cpp  i2c_module.h  i2sModule.cpp  i2sModule.h  i2s_module.cpp  i2s_module.h  pwmModule.cpp  pwmModule.h  pwm_module.cpp  pwm_module.h  rtcModule.cpp  rtcModule.h  rtc_module.cpp  rtc_module.h  sai_module.cpp  sai_module.h  spiModule.cpp  spiModule.hpp  spi_module.cpp  spi_module.h  uartModule.cpp  uartModule.hpp  uart_module.cpp  (+1 more)
interfaces/: adsModule.cpp  adsModule.h  adsModuleConfig.h  ds2484Module.cpp  ds2484Module.h  ds2484_module.h  esp32Module.cpp  esp32Module.h  esp32_module.cpp  esp32_module.h  heartbeatModule.cpp  heartbeatModule.h  heartbeat_module.cpp  heartbeat_module.h  interruptHandler.h  ltc2498Module.cpp  ltc2498Module.h  ltc2498_module.cpp  ltc2498_module.h  max14763Module.cpp  max14763Module.h  max14763_module.h  max14778Module.cpp  max14778Module.h  max14778_module.cpp  max14778_module.h  max323Module.h  max323_module.h  pca9505Module.cpp  pca9505Module.h  pca9505_module.cpp  pca9505_module.h  relayModule.cpp  relayModule.h  relay_module.h  rn2903Module.cpp  rn2903Module.h  sdModule.cpp  sdModule.h  tlp3545.h
processes/: NilaiTFOConfig_Template.h  NilaiTFO_config_Template.h  Test.cpp  Test.hpp  application.cpp  application.h  application.hpp
services/: IniParser.cpp  IniParser.h  SystemModule.cpp  SystemModule.h  Time.h  canSlaveService.cpp  canSlaveService.h  deserializer.h  file.cpp  file.h  fileLoggerModule.cpp  fileLoggerModule.h  file_logger_module.cpp  file_logger_module.h  filesystem.cpp  filesystem.h  ini_parser.cpp  ini_parser.h  logger.cpp  logger.h  logger.hpp  serializer.h  system_module.cpp  system_module.h  tickUnits.hpp  ticks.cpp  ticks.hpp  time.h  timeout.hpp  umoModule.cpp  umoModule.h  umo_module.cpp  umo_module.h
test/: CMakeLists.txt  build.ps1  full_build.ps1  test.cpp
test/BitManipulations/: arraynificator.cpp  combine.cpp  swap.cpp
test/Interfaces/: CMakeLists.txt
test/Interfaces/TAS5705/: CMakeLists.txt  EnumTests.cpp
test/Interfaces/TAS5707/: CMakeLists.txt  EnumTests.cpp  enum_tests.cpp
test/Interfaces/TAS5760/: CMakeLists.txt  StructTests.cpp
test/Mocks/: AdcModule.h  Logger.cpp  Logger.h  generic_stm32.h
test/Mocks/ADC/: adc.cpp  adc.h
test/Mocks/CAN/: can.h
test/Mocks/DMA/: dma.cpp  dma.h
test/Mocks/GPIO/: gpio.cpp  gpio.h
test/Mocks/HALMocks/: stm32_mock_hal.h
test/Mocks/HALMocks/stm32f4xx/: stm32f4xx_hal.cpp  stm32f4xx_hal.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_spi.h
test/Mocks/HALMocks/stm32l4xx/: stm32l452xx.h  stm32l4xx.h  stm32l4xx_hal_adc.h  stm32l4xx_hal_adc_ex.h  stm32l4xx_hal_dma.h  stm32l4xx_hal_flash.h  stm32l4xx_hal_i2c.h  stm32l4xx_hal_pwr_ex.h  stm32l4xx_hal_rcc.h  stm32l4xx_hal_rcc_ex.h  stm32l4xx_hal_rtc.h  stm32l4xx_hal_rtc_ex.h  stm32l4xx_hal_sai.h  stm32l4xx_hal_spi.h  stm32l4xx_hal_tim.h  stm32l4xx_hal_uart.h  stm32l4xx_ll_adc.h
test/Mocks/I2C/: device.h  i2c.cpp  i2c.h
test/Mocks/STM32F405/: io_buffer.h  stm32f405xx_hal.h  stm32f4xx_hal.cpp  stm32f4xx_hal.h  stm32f4xx_hal_def.h
test/Mocks/STM32L452/: stm32l452xx_hal.h  stm32l4xx_hal.cpp  stm32l4xx_hal.h  stm32l4xx_hal_def.h
test/Mocks/UART/: uart.cpp  uart.h
test/Mocks/drivers/: AdcModule.h  I2cModule.h  SaiModule.cpp  adc_module.h  canModule.cpp  canModule.hpp  can_module.cpp  can_module.h  handle.h  i2c_module.cpp  i2c_module.h  uartModule.hpp
test/Mocks/fatfs/: diskio.c  ff.c  ffconf.h
test/Mocks/fatfs_mocks/: ff.h
test/Mocks/interfaces/: adsModule.cpp
test/Mocks/interfaces/ADS131/: ads131_module.cpp  ads131_module.h
test/Mocks/services/: Logger.cpp  file.h  filesystem.h  ini_parser.cpp  logger.cpp  logger.h
test/Pin/: CMakeLists.txt  Test.cpp  test.cpp
test/Processes/: CMakeLists.txt
test/Processes/Application/: CMakeLists.txt  TestApp.h  test_app.h
test/Processes/Application/Events/: CMakeLists.txt  Tests.cpp  tests.cpp
test/bit_manipulations/: CMakeLists.txt  arraynificator.cpp  combine.cpp  swap.cpp
test/circular_buffer/: CMakeLists.txt  test.cpp  test_internal.cpp
test/defines/: CMakeLists.txt
test/defines/circular_buffer/: CMakeLists.txt  test.cpp
test/drivers/: CMakeLists.txt
test/drivers/uart/: CMakeLists.txt  NilaiTFOConfig.h  test.cpp
test/interfaces/TAS5707/: CMakeLists.txt  enum_tests.cpp
test/interfaces/TAS5760/: CMakeLists.txt  struct_tests.cpp
test/mocks/GPIO/: gpio.h
test/mocks/HALMocks/stm32f4xx/: stm32f4xx_hal.h  stm32f4xx_hal_uart.h
test/mocks/drivers/: adc_module.h  can_module.cpp  can_module.h  sai_module.cpp  sai_module.h  uart_module.h
test/mocks/interfaces/ADS131/: ads131_module_config.h
test/pin/: CMakeLists.txt  test.cpp
test/processes/: CMakeLists.txt
test/processes/application/: CMakeLists.txt
test/processes/application/events/: CMakeLists.txt
test/services/: CMakeLists.txt  deserializer.cpp  serializer.cpp
test/swap_buffer/: CMakeLists.txt  test.cpp
(+165 files in other folders)
